Whitespace fixes

--- a/assets/css/format.css
+++ b/assets/css/format.css
@@ -73,7 +73,8 @@ a:hover {
 
 .site-wrapper, .nav {
     margin: 0 auto;
-    max-width: 50em;
+    width: 50em;
+    max-width: 80%;
     padding: 2em;
     background-color: white;
 }
@@ -84,10 +85,6 @@ a:hover {
     overflow: hidden;
 }
 
-.nav ul {
-    margin: 0 3em;
-}
-
 .nav li {
     display: block;
     list-style: none;
@@ -95,11 +92,13 @@ a:hover {
 
 .nav li a {
     float: left;
-    padding: 0 1em;
+    padding-right: 1em;
 }
 
 .nav li a.subscribe-button {
     float: right;
+    padding-right: 0;
+    padding-left: 1em
 }
 
 .blog-logo img {
@@ -176,7 +175,7 @@ header.main-header.no-cover::after {
 }
 
 .post-header {
-    margin: 2em 0;
+    margin: 2em 0 1em 0;
 }
 
 .post-title {
